# MAS514-UiABOT

./: README.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/bno055/lib/bno055/: bno_node.py  tf_bno.py
ros2_ws/install/bno055/share/ament_index/resource_index/package_run_dependencies/: bno055
ros2_ws/install/bno055/share/ament_index/resource_index/parent_prefix_path/: bno055
ros2_ws/install/bno055/share/bno055/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/bno055/share/bno055/cmake/: bno055Config.cmake
ros2_ws/install/raspi_sub/lib/raspi_sub/: serial_interface.py
ros2_ws/install/raspi_sub/share/raspi_sub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/robot_description/lib/robot_description/: base_to_tf.py  joint_state_publisher.py  odom.py  serial_interface.py
ros2_ws/install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
ros2_ws/install/robot_description/share/robot_description/: package.sh  package.xml
ros2_ws/install/robot_description/share/robot_description/description/: robot_core.xacro
ros2_ws/install/sllidar_ros2/lib/sllidar_ros2/: sllidar_node
ros2_ws/install/sllidar_ros2/share/sllidar_ros2/: local_setup.sh  package.sh
ros2_ws/log/: latest_build
ros2_ws/src/bno055/: CMakeLists.txt
ros2_ws/src/bno055/src/: bno_node.py  tf_bno.py
ros2_ws/src/raspi_sub/: CMakeLists.txt
ros2_ws/src/raspi_sub/src/: forward_kinematic.py  odom.py
ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/robot_description/launch/: robot_launch.launch.py  rsp.launch.py
